--- a/index.html
+++ b/index.html
@@ -156,6 +156,21 @@
         .account-card h3 {
             margin: 0;
         }
+        .resume-button { /* Purple color matching your portfolio theme */
+            color: #BB86FC;
+            margin-top: 10px;
+            padding: 10px 20px;
+            border-radius: 5px;
+            display: inline-block;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            font-weight: 500;
+        }
+
+        .resume-button:hover {/* Darker purple on hover */
+            transform: translateY(-2px);
+            box-shadow: 0 2px 8px rgba(187, 134, 252, 0.3);
+        }
     </style>
 </head>
 <body>
@@ -177,7 +192,8 @@
             <p>I am a Pre-Final Year B.Tech student at IIIT Naya Raipur, exploring Computer Science. <br>
                 With some silly projects in Web Development and Machine Learning, <br>
                 Also tried some Competitive Programming,<br>
-                Outside coding, I'm an decent chess player</p>
+                Outside coding, I'm a decent chess player</p>
+            <a href="https://drive.google.com/file/d/12S8orpZF9e33Km_1vNeRA02Lgujei9G2/view" class="resume-button" target="_blank">Resume</a>
         </section>
 
         <section id="education">
