--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <section id="education">
             <h2>Education</h2>
             <div class="education-item">
-                <h3>Electrical and Communication Engineering</h3>
+                <h3>Electronics and Communication Engineering</h3>
                 <p>IIIT Naya Raipur | 2022-2026</p> <p>GPA : 8.36</p>
             </div>
         </section>
