--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <div class="card" onclick="window.location.href='https://github.com/jatingaur18/food_ordering_app'">
                 <img src="image copy 6.png" alt="Project 9">
                 <div class="card-content">
-                    <h3>Food Orgering app</h3>
+                    <h3>Food Ordering app</h3>
                     <p>This is a simple food ordering app built using Python and the Tkinter library. The app allows users to browse a menu, select items, and place an order. It also has an admin section for managing staff and dishes.</p>
                 </div>
             </div>
