--- a/index.html
+++ b/index.html
@@ -108,6 +108,14 @@
             line-height: 1.7;
         }
 
+        .hero-actions {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 1rem;
+            flex-wrap: wrap;
+        }
+
         .resume-link {
             display: inline-block;
             padding: 12px 24px;
@@ -123,6 +131,30 @@
         .resume-link:hover {
             background: #2a2a2a;
             border-color: #444;
+        }
+
+        .github-link {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 48px;
+            height: 48px;
+            background: #1a1a1a;
+            border-radius: 6px;
+            border: 1px solid #333;
+            transition: all 0.3s ease;
+            text-decoration: none;
+        }
+
+        .github-link:hover {
+            background: #2a2a2a;
+            border-color: #444;
+        }
+
+        .github-icon {
+            width: 24px;
+            height: 24px;
+            fill: #ffffff;
         }
 
         /* Sections */
@@ -148,6 +180,7 @@
             border-radius: 8px;
             border: 1px solid #1a1a1a;
             transition: all 0.3s ease;
+            position: relative;
         }
 
         .account-card:hover {
@@ -155,10 +188,24 @@
             background: #151515;
         }
 
+        .account-header {
+            display: flex;
+            align-items: center;
+            gap: 0.75rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .platform-logo {
+            width: 28px;
+            height: 28px;
+            border-radius: 4px;
+            object-fit: cover;
+        }
+
         .account-card h3 {
             color: #ffffff;
-            margin-bottom: 0.5rem;
             font-weight: 600;
+            margin: 0;
         }
 
         .account-card .rating {
@@ -330,6 +377,11 @@
             .accounts-grid {
                 grid-template-columns: 1fr;
             }
+
+            .hero-actions {
+                flex-direction: column;
+                align-items: center;
+            }
         }
 
         /* Smooth scrolling */
@@ -379,9 +431,19 @@
                 <p class="description">
                     Final Year B.Tech student at IIIT Naya Raipur, exploring Computer Science with projects in Web Development and Machine Learning. Also into Competitive Programming and chess.
                 </p>
-                <a href="https://drive.google.com/file/d/1tObzNv32gG7ML-NJR54gHa1q-v6SqLG9/view" 
-                   target="_blank" 
-                   class="resume-link">View Resume</a>
+                <div class="hero-actions">
+                    <a href="https://drive.google.com/file/d/1tObzNv32gG7ML-NJR54gHa1q-v6SqLG9/view" 
+                       target="_blank" 
+                       class="resume-link">View Resume</a>
+                    <a href="https://github.com/jatingaur18" 
+                       target="_blank" 
+                       class="github-link"
+                       title="GitHub Profile">
+                        <svg class="github-icon" viewBox="0 0 24 24">
+                            <path d="M12 0.296997C5.37 0.296997 0 5.67 0 12.297C0 17.6 3.438 22.097 8.207 23.682C8.806 23.795 9.025 23.424 9.025 23.105C9.025 22.820 9.015 22.065 9.010 21.065C5.672 21.789 4.968 19.455 4.968 19.455C4.422 18.07 3.633 17.7 3.633 17.7C2.546 16.956 3.717 16.971 3.717 16.971C4.922 17.055 5.555 18.207 5.555 18.207C6.625 20.042 8.364 19.512 9.05 19.205C9.158 18.429 9.467 17.9 9.81 17.6C7.145 17.3 4.344 16.268 4.344 11.67C4.344 10.36 4.809 9.29 5.579 8.45C5.444 8.147 5.039 6.927 5.684 5.274C5.684 5.274 6.689 4.952 8.984 6.504C9.944 6.237 10.964 6.105 11.984 6.099C13.004 6.105 14.024 6.237 14.984 6.504C17.264 4.952 18.269 5.274 18.269 5.274C18.914 6.927 18.509 8.147 18.389 8.45C19.154 9.29 19.619 10.36 19.619 11.67C19.619 16.28 16.814 17.295 14.144 17.59C14.564 17.950 14.954 18.686 14.954 19.81C14.954 21.416 14.939 22.706 14.939 23.096C14.939 23.411 15.149 23.786 15.764 23.666C20.565 22.092 24 17.592 24 12.297C24 5.67 18.627 0.296997 12 0.296997Z"/>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </section>
 
@@ -391,28 +453,40 @@
                 <h2 class="section-title">Competitive Programming</h2>
                 <div class="accounts-grid">
                     <div class="account-card">
-                        <h3>Codeforces</h3>
+                        <div class="account-header">
+                            <img src="https://codeforces.org/s/0/favicon-96x96.png" alt="Codeforces" class="platform-logo">
+                            <h3>Codeforces</h3>
+                        </div>
                         <p class="rating">Rating: 1489</p>
                         <a href="https://codeforces.com/profile/jugheadjones" target="_blank">
                             View Profile →
                         </a>
                     </div>
                     <div class="account-card">
-                        <h3>LeetCode</h3>
+                        <div class="account-header">
+                            <img src="https://leetcode.com/favicon.ico" alt="LeetCode" class="platform-logo">
+                            <h3>LeetCode</h3>
+                        </div>
                         <p class="rating">Rating: 1864</p>
                         <a href="https://leetcode.com/jatingaur18" target="_blank">
                             View Profile →
                         </a>
                     </div>
                     <div class="account-card">
-                        <h3>Chess.com</h3>
+                        <div class="account-header">
+                            <img src="https://www.chess.com/favicon.ico" alt="Chess.com" class="platform-logo">
+                            <h3>Chess.com</h3>
+                        </div>
                         <p class="rating">Rating: 1630</p>
                         <a href="https://www.chess.com/stats/overview/jughead_iv/0" target="_blank">
                             View Profile →
                         </a>
                     </div>
                     <div class="account-card">
-                        <h3>Lichess</h3>
+                        <div class="account-header">
+                            <img src="https://lichess1.org/assets/_Qw1VCT/logo/lichess-favicon-32.png" alt="Lichess" class="platform-logo">
+                            <h3>Lichess</h3>
+                        </div>
                         <p class="rating">Rating: 2068</p>
                         <a href="https://lichess.org/@/jatin25chess/perf/rapid" target="_blank">
                             View Profile →
@@ -508,7 +582,7 @@
     </main>
 
     <!-- Walking People Animation -->
-    <section style="position: relative; height: 320px; overflow: hidden; background: #050505; border-top: 1px solid #1a1a1a;">
+    <section style="position: relative; height: 330px; overflow: hidden; background: #050505; border-top: 1px solid #1a1a1a;">
         <canvas id="canvas" style="width: 100%; height: 100%; display: block;"></canvas>
     </section>
 
