--- a/chessMetrics.html
+++ b/chessMetrics.html
@@ -158,7 +158,7 @@
 
                 <a href="https://chess-metrics.vercel.app/" target="_blank"
                     class="flex items-center gap-2 px-4 py-2 bg-chess-accent text-white rounded hover:bg-chess-accentHover transition-colors font-semibold shadow-lg shadow-chess-accent/10">
-                    <i class="fa-solid fa-rocket"></i> Launch App
+                    Launch App
                 </a>
             </div>
         </div>
