--- a/pins.html
+++ b/pins.html
@@ -168,7 +168,7 @@
 
     <!-- Header -->
     <header class="py-8 text-center border-b border-white/5 bg-[#161512]/90 backdrop-blur-sm sticky top-0 z-50">
-        <h1 class="text-3xl font-display font-bold text-chess-white mb-2">Inspiration Feed</h1>
+        <h1 class="text-3xl font-display font-bold text-chess-white mb-2">Feed</h1>
         <div
             class="inline-flex items-center gap-2 px-3 py-1 bg-[#262421] rounded-full border border-white/5 text-sm text-chess-light">
             <i class="fa-brands fa-pinterest text-chess-accent"></i>
